--- a/src/components/home/subscribenewsletter/newsletter.css
+++ b/src/components/home/subscribenewsletter/newsletter.css
@@ -41,7 +41,7 @@
   }
 
 
-  @media (max-width: 280px) {
+   @media (max-width: 280px) {
     .newsletter-header{
         padding-top: 20px;
         padding-bottom: 20px;
@@ -53,14 +53,44 @@
         padding-bottom: 20px;
         font-size: 15px;
     }
+
+    .ktn-span{
+      font-weight: bold;
+      color: rgb(20, 20, 58);
+      font-size: 20px;
+  }
     .newsletter-btn {
-        /* Adjust the styles for larger screens */
         padding: 15px 30px;
         font-size: 20px;
       }
+
+
+      .newsletter-text{
+        font-size: 12px;
+      }
+      .newsletter-btn {
+        border: none;
+        padding: 20px 25px;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 15px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        border-radius: 4px;
+        font-weight: bold;
+        color: white;
+    background-color: rgb(76, 157, 197);
+      } 
+
+      .ktnplus{
+        width: 200px;
+        height: 390px;
+        margin-top: -370px;
+        margin-bottom: -340px;
+      }
     
   }
-  
+   
   @media (min-width:350px) and (max-width: 480px) {
     .newsletter-header{
         padding-top: 20px;
@@ -69,20 +99,40 @@
         font-size: 40px;
 
     }
-    .newsletter-text {
-        padding-bottom: 28px;
+    .ktn-span{
+      font-weight: bold;
+      color: rgb(20, 20, 58);
+      font-size: 20px;
+  }
+
+      .newsletter-text{
         font-size: 15px;
-      
-    }
-    .newsletter-btn {
-        /* Adjust the styles for larger screens */
-        padding: 15px 30px;
-        font-size: 20px;
-        background-color: red;
+        margin-bottom: 50px;
       }
+      .newsletter-btn {
+        border: none;
+        padding: 25px 20px;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 15px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        border-radius: 4px;
+        font-weight: bold;
+        color: white;
+    background-color: rgb(76, 157, 197);
+      } 
+      .ktnplus{
+        width: 210px;
+        height: 390px;
+        margin-top: -370px;
+        margin-bottom: -340px;
+      }
+      
   }
   
-  @media (min-width:481px) and (max-width: 767px) {
+  @media (min-width: 481px) and (max-width: 767px) {
+
     .newsletter-header{
         padding-top: 20px;
         padding-bottom: 20px;
@@ -103,7 +153,7 @@
       } 
   }
   
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 768px) and (max-width: 998px) {
     .newsletter-header{
         padding-top: 20px;
         padding-bottom: 20px;
@@ -124,42 +174,75 @@
       } 
   }
   
-  @media screen and (min-width: 1025px) and (max-width: 1280px) {
+  @media (min-width: 1025px) and (max-width: 1280px) {
     .newsletter-header{
         color: white;
 
     }
-
-    .newsTexts{
-        margin-bottom: 80px;
-}
     .newsletter-text {
         padding: 15px;
-        font-size: 15px;
+        font-size: 13px;
     }
 
     .ktn-span{
         font-weight: bold;
         color: rgb(20, 20, 58);
     }
+    
     .newsletter-btn {
         width: 30%;
         padding: 30px 30px;
         margin: 0 auto;
     display: block;
-    margin-bottom: 30px;
       } 
 
       
       .ktnplus{
-        width: 500px;
-        height: 400px;
-        margin-top: -350px;
-        margin-bottom: -350px;
+        width: 300px;
+        height: 520px;
+        margin-top: -200px;
+        margin-bottom: -200px;
       }
   }
+
+  @media screen and (min-width: 1281px) and (max-width: 1442px) {
+
+    .newsletter-header{
+      padding-top: 20px;
+      padding-bottom: 20px;
+      color: white;
+      font-size: 45px;
+
+  }
+  .newsletter-text {
+      padding-bottom: 10px;
+      padding-top: 50px;
+      font-size: 20px;
+  }
+  .ktn-span{
+      font-weight: bold;
+      color: rgb(20, 20, 58);
+      font-size: 40px;
+  }
+  .newsletter-btn {
+      width: 30%;
+      padding: 30px 30px;
+      margin: 0 auto;
+  display: block;
+  margin-bottom: 10px;
+  background-color: rgb(76, 157, 197);
+    } 
+
+    .ktnplus{
+      width: 340px;
+      height: 550px;
+      margin-top: -300px;
+      margin-bottom: -340px;
+    }
   
-  @media screen and  (min-width: 1281px) {
+  }
+  
+  @media (min-width: 1443px) {
     .newsletter-header{
         padding-top: 20px;
         padding-bottom: 20px;
@@ -168,32 +251,30 @@
 
     }
     .newsletter-text {
-        padding-bottom: 28px;
-        font-size: 22px;
-    }
-
-    .newsTexts{
-            margin-bottom: 80px;
+        padding-bottom: 10px;
+        padding-top: 50px;
+        font-size: 20px;
     }
 
     .ktn-span{
         font-weight: bold;
         color: rgb(20, 20, 58);
+        font-size: 40px;
     }
     .newsletter-btn {
         width: 30%;
         padding: 30px 30px;
         margin: 0 auto;
     display: block;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     background-color: rgb(76, 157, 197);
       } 
 
       .ktnplus{
-        width: 500px;
-        height: 500px;
-        margin-top: -370px;
-        margin-bottom: -350px;
+        width: 340px;
+        height: 550px;
+        margin-top: -300px;
+        margin-bottom: -340px;
       }
   }
   
