--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -18,54 +18,118 @@
 
   @media (min-width:280px) {
     .background-image-blog {
-        height: 30vh; 
-      }
-    .blog-text{
-        text-align: center;
-        padding: 30px;
-      }
-
-  .selected-title{
-   align-items: center;
-   margin-left: 30px;
-  }
-
-  .blog-headersss{
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .blog-drop{
-    position: relative;
-    bottom: 31px;
-    left: 30px;
-  }
+      height: 30vh; 
+    }
+      .blog-text{
+          text-align: start;
+          padding: 20px 0px 1px 10px;
+          font-size: 10px;
+          width: 100%;
+        }
+  
+        .blog-container{
+          overflow: hidden;
+        }
+    .selected-title{
+     align-items: center;
+     margin-right: 30px;
+    }
+  
+    .blog-headersss{
+      text-align: center;
+      margin-bottom: 120px;
+      margin-top: 60px;
+      margin-left: 40px;
+      width: 100%;
+      font-size: 25px;
+    }
+  
+    
+    .blog-select {
+      display: inline-block;
+      padding: 10px;
+      border: 3px solid rgb(20, 20, 58);
+      border-radius: 7px;
+      font-size: 10px;
+      color: rgb(20, 20, 58);
+      background-color: #fff;
+      cursor: pointer;
+    }
+  
+    .blog-value  {
+      padding: 10px;
+      font-size: 10px;
+      color: rgb(20, 20, 58);
+      background-color: rgb(76, 157, 197);
+    }
+    .blog-drop{
+      position: relative;
+      top: 145px;
+      left: -150px;
+      align-items: center;
+    }
+    .ktn-blog-text{
+      font-weight: bold;
+      color: rgb(20, 20, 58);
+    }
   }
   @media (min-width:350px) and (max-width: 480px) {
 
     .background-image-blog {
-        height: 50vh; 
-      }
-    .blog-text{
-        text-align: center;
-        padding: 30px;
-      }
-
-  .selected-title{
-   align-items: center;
-   margin-left: 30px;
-  }
-
-  .blog-headersss{
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .blog-drop{
-    position: relative;
-    bottom: 31px;
-    left: 120px;
-  }
+      height: 50vh; 
+    }
+      .blog-text{
+          text-align: start;
+          padding: 20px 0px 1px 10px;
+          font-size: 12px;
+          width: 100%;
+        }
+  
+        .blog-container{
+          overflow: hidden;
+        }
+    .selected-title{
+     align-items: center;
+     margin-right: 30px;
+    }
+  
+    .blog-headersss{
+      text-align: center;
+      margin-bottom: 120px;
+      margin-top: 60px;
+      margin-left: 50px;
+      width: 100%;
+      font-size: 25px;
+    }
+  
+    
+    .blog-select {
+      display: inline-block;
+      padding: 10px;
+      border: 3px solid rgb(20, 20, 58);
+      border-radius: 7px;
+      font-size: 10px;
+      color: rgb(20, 20, 58);
+      background-color: #fff;
+      cursor: pointer;
+    }
+  
+    .blog-value  {
+      padding: 10px;
+      font-size: 10px;
+      color: rgb(20, 20, 58);
+      background-color: rgb(76, 157, 197);
+    }
+    .blog-drop{
+      position: relative;
+      top: 110px;
+      left: -180px;
+      align-items: center;
+    }
+    .ktn-blog-text{
+      font-weight: bold;
+      color: rgb(20, 20, 58);
+    }
    
 
     }
@@ -199,6 +263,10 @@
    margin-left: 30px;
   }
 
+  .ktn-blog-text{
+    font-weight: bold;
+    color: rgb(20, 20, 58);
+  }
   .blog-headersss{
     text-align: center;
     margin-left: 360px;
@@ -209,28 +277,25 @@
 
   
   .blog-select {
-    display: inline-block;
-    padding: 20px 80px 20px 10px;
-    border: 3px solid rgb(20, 20, 58);
-    border-radius: 7px;
+    padding: 8px;
     font-size: 16px;
-    color: rgb(20, 20, 58);
-    background-color: #fff;
-    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
   }
 
-  .blog-value  {
-    padding: 100px;
-    font-size: 10px;
-    color: rgb(20, 20, 58);
-    background-color: rgb(76, 157, 197);
+  .blog-value {
+    padding: 18px;
   }
+
+  /* Style the selected option */
+  .blog-select option:checked {
+    background-color: rgb(76, 157, 197);
+    color: #fff;
+  }
+
   .blog-drop{
     position: relative;
     top: 50px;
-  }
-  .ktn-blog-text{
-    font-weight: bold;
-    color: rgb(20, 20, 58);
   }
 }
