--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -345,8 +345,77 @@
 
  
   }
+
+  @media screen and (min-width: 1281px) and (max-width: 1442px) {
+      
+    .background-image-contact {
+      height: 80vh; /* Adjust as needed */
+  }
+
+  .contact-header{
+      text-align: center;
+      color: rgb(20, 20, 58);
+     
+      margin-top: 300px;
+      font-size: 60px;
+  }
+
+  .form-group input,
+  .form-group textarea,
+  .form-group button {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .form-contact{
+      padding: 40px 120px 120px 120px;
+  }
+ .contact-top{
+  margin-top: 60px;
+ }
+
+ .form-top{
+  height: 60px;
+  margin-bottom: 20px;
+ }
+
+ .contact-second{
+  margin-top: 20px;
+  margin-bottom: 20px;
+ }
+
+ .btn-contact{
+ margin-bottom: 20px;
+ }
+
+ .btn-contact:hover{
+ background-color: rgb(76, 157, 197);
+  }
+
+ .contact-label{
+  font-weight: bold;
+  margin-bottom: 50px;
+  margin-right: 10px;
+ }
+
+ .custom-select {
+  padding: 20px 80px 20px 20px;
+  font-size: 16px;
+}
+.custom-select option {
+  padding: 100px;
+  font-size: 10px;
+  color: rgb(20, 20, 58);
+  background-color: rgb(76, 157, 197);
+}
+.contact-text{
+  text-align: center;
+  padding: 60px 50px 1px 50px;
+  font-size: 25px;
+}
+  }
   
-  @media screen and  (min-width: 1281px) {
+  @media screen and  (min-width: 1443px) {
 
     .background-image-contact {
         height: 80vh; /* Adjust as needed */
