--- a/src/components/copywriting/copywriting.css
+++ b/src/components/copywriting/copywriting.css
@@ -28,6 +28,28 @@
     font-weight: bold;
   }
 
+  .copysection{
+    background-color:  rgb(20, 20, 58); /* Set the background color */
+    padding: 70px;
+  }
+
+  .copysection h4{
+    color: white; 
+    margin-bottom: 20px; 
+  }
+
+  .btn-copysection {
+    background-color:  rgb(76, 157, 197);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+
+}
 
   @media (min-width:280px) {
     .container-fluid-hero-copy{
@@ -36,13 +58,17 @@
   
     .hero-header-copy {
       font-size: 33px;
-      margin: 30px 10px 10px 10px;
-      width: 100%;
+      margin: 30px 10px 30px 10px;
+      width: 90%;
     }
   
   
     .hero-desc-copy{
-      padding-left: 1px;
+      padding-left: 25px;
+    }
+
+    .btn-text-copy{
+      font-size: 15px;
     }
   
     .btn-crow-copy{
@@ -57,13 +83,17 @@
       margin-bottom: 20px;
     }
     
-    .btn-hero-two-copy {
-      background-color: rgb(20, 20, 58);
-      padding: 20px 72px;
-      border-radius: 4px; 
-      margin-bottom: 20px;
-    }
-  
+  .copysection h4 {
+    color: white; 
+    width: 100%;
+    font-size: 13px; 
+}
+
+.btn-copysection {
+  margin: 0 auto;
+  width: 100%;
+  font-size: 13px;
+}
   
   
    
@@ -75,6 +105,7 @@
   
     .container-fluid-hero-copy{
       width: 97.5%;
+   
     }
     .hero-header-copy {
       padding: 60px 30px 30px 15px;
@@ -105,7 +136,22 @@
       background-color: rgb(20, 20, 58);
       width: 100%;
     }
+    .btn-text-copy{
+      font-size: 15px;
+    }
   
+    .copysection h4 {
+      color: white; 
+      width: 100%;
+      font-size: 20px; 
+      text-align: center;
+  }
+
+  .btn-copysection {
+    margin: 0 auto;
+    width: 100%;
+    font-size: 16px;
+}
 
    
   }
@@ -223,8 +269,8 @@
      .hero-header-copy {
       padding: 10px;
       font-size: 70px;
-      margin: 30px 40px -10px 40px;
-      width: 70%;
+      margin: 150px 40px -10px 40px;
+      width: 65%;
     }
   
     .hero-desc-copy{
@@ -262,12 +308,32 @@
     .btn-text-copy{
       font-size: 20px;
     }
+
+    .copysection h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;/* Add spacing below the heading */
+  }
+
+  .btn-copysection {
+    font-size: 20px;
+    padding: 20px 10px;
+    float: right;
+    margin-top: -180px;
+    margin-right: 30px;
+    width: 25%;
+}
+    .btn-copysection:hover{
+      background-color: red;
+
+    }
   
   
   }
-  
-  @media screen and  (min-width: 1281px) {
-  
+
+  @media screen and (min-width: 1281px) and (max-width: 1442px) {
     .background-image-copy {
       
       height: 100vh; /* Adjust as needed */
@@ -281,7 +347,7 @@
       font-size: 70px;
       width: 70%;
       margin-top: 30px;
-      margin: 30px 40px -15px 25px;
+      margin: 150px 40px -15px 25px;
     }
   
     .hero-desc-copy{
@@ -304,9 +370,13 @@
     
     .btn-hero-two-copy {
       background-color: rgb(20, 20, 58);
-      padding: 20px 32px;
+      padding: 20px 50px;
       border-radius: 4px;
     }
+    .btn-text-copy{
+      font-size: 30px;
+    }
+    
   
     .btn-hero-one-copy:hover {
       background-color: rgb(76, 157, 197);
@@ -318,6 +388,111 @@
    
     .btn-text{
       font-size: 25px;
+    }
+
+
+    
+    .copysection h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;/* Add spacing below the heading */
+  }
+
+  .btn-copysection {
+    font-size: 20px;
+    padding: 20px 20px;
+    float: right;
+    margin-top: -180px;
+    margin-right: 30px;
+    width: 25%;
+}
+    .btn-copysection:hover{
+      background-color: red;
+
+    }
+  }
+  
+  @media screen and  (min-width: 1443px) {
+  
+    .background-image-copy {
+      
+      height: 100vh; /* Adjust as needed */
+    }
+  
+    .container-fluid-hero-copy{
+      width: 99.2%;
+    }
+     .hero-header-copy {
+      padding: 40px;
+      font-size: 70px;
+      width: 70%;
+      margin-top: 30px;
+      margin: 150px 40px -15px 25px;
+    }
+  
+    .hero-desc-copy{
+      padding: 5px 40px 40px 40px;
+      margin: 30px;
+      font-size: 25px;
+      width: 70%;
+    }
+  
+    .btn-crow-copy{
+      width: 50%;
+      padding-left: 70px;
+    }
+    .btn-hero-one-copy{
+      background-color: rgb(20, 20, 58);
+      padding: 20px 32px;
+      border-radius: 4px;
+      margin-top: 1px;
+    }
+    
+    .btn-hero-two-copy {
+      background-color: rgb(20, 20, 58);
+      padding: 20px 50px;
+      border-radius: 4px;
+    }
+    .btn-text-copy{
+      font-size: 30px;
+    }
+    
+  
+    .btn-hero-one-copy:hover {
+      background-color: rgb(76, 157, 197);
+    }
+  
+    .btn-hero-two-copy:hover {
+      background-color: rgb(76, 157, 197);
+    }
+   
+    .btn-text{
+      font-size: 25px;
+    }
+
+
+    
+    .copysection h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;
+  }
+
+  .btn-copysection {
+    font-size: 20px;
+    padding: 20px 20px;
+    float: right;
+    margin-top: -160px;
+    margin-right: 30px;
+    width: 20%;
+}
+    .btn-copysection:hover{
+      background-color: red;
+
     }
   }
   
