--- a/src/components/ghostwriting/ghostwriting.css
+++ b/src/components/ghostwriting/ghostwriting.css
@@ -29,6 +29,29 @@
   }
 
 
+  .allghostservice{
+    background-color:  rgb(20, 20, 58); /* Set the background color */
+    padding: 70px;
+  }
+
+  .allghostservice h4{
+    color: white; 
+    margin-bottom: 20px; 
+  }
+
+  .btn-ghostsection {
+    background-color:  rgb(76, 157, 197);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+
+}
+
   @media (min-width:280px) {
     .container-fluid-hero-ghost{
       width: 96%;
@@ -36,13 +59,13 @@
   
     .hero-header-ghost {
       font-size: 33px;
-      margin: 30px 10px 10px 10px;
-      width: 100%;
+      margin: 30px 10px 30px 10px;
+      width: 90%;
     }
   
   
     .hero-desc-ghost{
-      padding-left: 1px;
+      padding-left: 25px;
     }
   
     .btn-crow-ghost{
@@ -63,6 +86,22 @@
       border-radius: 4px; 
       margin-bottom: 20px;
     }
+
+    .btn-text-ghost{
+      font-size: 12px;
+    }
+
+    .allghostservice h4 {
+      color: white; 
+      width: 100%;
+      font-size: 15px; 
+  }
+
+  .btn-ghostsection{
+    margin: 0 auto;
+    width: 100%;
+    font-size: 13px;
+  }
   
   
   
@@ -71,16 +110,18 @@
     
   
   @media (min-width:350px) and (max-width: 480px) {
+
   
   
     .container-fluid-hero-ghost{
       width: 97.5%;
+      margin-bottom: 190px;
     }
     .hero-header-ghost {
-      padding: 60px 30px 30px 15px;
+      padding: 30px 30px 30px 15px;
       font-size: 45px;
-      margin: -10px 10px;
-      width: 100%;
+      margin: 10px 10px;
+      width: 90%;
     }
     .hero-desc-ghost{
       width: 90%;
@@ -106,7 +147,22 @@
       width: 100%;
     }
   
+        .btn-text-ghost{
+      font-size: 15px;
+    }
 
+    .allghostservice h4 {
+      color: white; 
+      width: 100%;
+      font-size: 20px; 
+      text-align: center;
+  }
+
+  .btn-ghostsection{
+    margin: 0 auto;
+    width: 100%;
+    font-size: 16px;
+  }
    
   }
     
@@ -214,28 +270,28 @@
   
     .background-image-ghost {
       
-      height: 110vh; /* Adjust as needed */
+      height: 130vh; /* Adjust as needed */
     }
   
-    .container-fluid-hero-ghost{
+    .container-fluid-hero-ghost{ 
       width: 99.2%;
     }
      .hero-header-ghost {
       padding: 10px;
       font-size: 70px;
-      margin: 30px 40px -10px 40px;
+      margin: 10px 40px -10px 40px;
       width: 70%;
     }
   
     .hero-desc-ghost{
       padding: 30px 30px 30px 50px;
       font-size: 25px;
-      width: 80%;
+      width: 60%;
     }
   
     .btn-crow-ghost{
-      width: 50%;
-      padding-left: 50px;
+      width: 60%;
+    padding-left: 50px;
     }
     .btn-hero-one-ghost{
       background-color: rgb(20, 20, 58);
@@ -246,8 +302,8 @@
     
     .btn-hero-two-ghost {
       background-color: rgb(20, 20, 58);
-      padding: 20px 32px;
-      border-radius: 4px; 
+    padding: 20px 12px;
+    border-radius: 4px; 
     }
   
     .btn-hero-one-ghost:hover {
@@ -257,17 +313,39 @@
     .btn-hero-two-ghost:hover {
       background-color: rgb(76, 157, 197);
     }
-  
-   
+
     .btn-text-ghost{
       font-size: 20px;
+    }
+
+  
+   
+    .allghostservice h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;
+  }
+
+  .btn-ghostsection {
+    font-size: 20px;
+    padding: 20px 10px;
+    float: right;
+    margin-top: -180px;
+    margin-right: 30px;
+    width: 25%;
+}
+    .btn-ghostsection:hover{
+      background-color: red;
+
     }
   
   
   }
-  
-  @media screen and  (min-width: 1281px) {
-  
+
+  @media screen and (min-width: 1281px) and (max-width: 1442px) {
+      
     .background-image-ghost {
       
       height: 100vh; /* Adjust as needed */
@@ -281,7 +359,7 @@
       font-size: 70px;
       width: 70%;
       margin-top: 30px;
-      margin: 30px 40px -15px 25px;
+      margin: 90px 40px -15px 25px;
     }
   
     .hero-desc-ghost{
@@ -297,15 +375,16 @@
     }
     .btn-hero-one-ghost{
       background-color: rgb(20, 20, 58);
-      padding: 20px 32px;
-      border-radius: 4px;
-      margin-top: 1px;
+    padding: 20px 20px;
+    border-radius: 4px;
+    margin-top: 1px;
+    margin-bottom: 400px;
     }
     
     .btn-hero-two-ghost {
       background-color: rgb(20, 20, 58);
-      padding: 20px 32px;
-      border-radius: 4px;
+    padding: 20px 20px;
+    border-radius: 4px;
     }
   
     .btn-hero-one-ghost:hover {
@@ -316,8 +395,105 @@
       background-color: rgb(76, 157, 197);
     }
    
-    .btn-text{
+    .btn-text-ghost{
       font-size: 25px;
+    }
+
+    .allghostservice h4 {
+      color: white; 
+      width: 60%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;/* Add spacing below the heading */
+  }
+
+  .btn-ghostsection {
+    font-size: 20px;
+    padding: 20px 10px;
+    float: right;
+    margin-top: -190px;
+    width: 25%;
+}
+    .btn-ghostsection:hover{
+      background-color: red;
+
+    }
+  }
+  
+  @media screen and  (min-width: 1443px) {
+  
+    .background-image-ghost {
+      
+      height: 100vh; /* Adjust as needed */
+    }
+  
+    .container-fluid-hero-ghost{
+      width: 99.2%;
+    }
+     .hero-header-ghost {
+      padding: 40px;
+      font-size: 70px;
+      width: 70%;
+      margin-top: 30px;
+      margin: 80px 40px -15px 25px;
+    }
+  
+    .hero-desc-ghost{
+      padding: 5px 40px 40px 40px;
+      margin: 30px;
+      font-size: 25px;
+      width:65%;
+    }
+  
+    .btn-crow-ghost{
+      width: 50%;
+      padding-left: 70px;
+    }
+    .btn-hero-one-ghost{
+      background-color: rgb(20, 20, 58);
+    padding: 20px 50px;
+    border-radius: 4px;
+    margin-top: 1px;
+    margin-bottom: 400px;
+    }
+    
+    .btn-hero-two-ghost {
+      background-color: rgb(20, 20, 58);
+    padding: 20px 20px;
+    border-radius: 4px;
+    }
+  
+    .btn-hero-one-ghost:hover {
+      background-color: rgb(76, 157, 197);
+    }
+  
+    .btn-hero-two-ghost:hover {
+      background-color: rgb(76, 157, 197);
+    }
+   
+    .btn-text-ghost{
+      font-size: 25px;
+    }
+
+    .allghostservice h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;
+  }
+
+  .btn-ghostsection {
+    font-size: 20px;
+    padding: 20px 20px;
+    float: right;
+    margin-top: -150px;
+    margin-right: 30px;
+    width: 20%;
+}
+    .btn-ghostsection:hover{
+      background-color: red;
+
     }
   }
   
