--- a/src/components/home/cta/cta.css
+++ b/src/components/home/cta/cta.css
@@ -27,13 +27,13 @@
 
 @media (max-width: 576px) {
     .cta {
-        padding: 40px; 
+        padding: 20px; 
         text-align: center; 
     }
 
     .cta h4 {
-       text-align:center;
-        font-size: 20px; /* Adjust font size for smaller screens */
+       text-align:start;
+        font-size: 17px; /* Adjust font size for smaller screens */
     }
 
     .btn-cta {
@@ -47,12 +47,12 @@
         width: 70%;
         font-size: 30px; 
         align-items: start;
-        padding: 30px;/* Add spacing below the heading */
+        padding: 30px 30px 30px 0px;/* Add spacing below the heading */
     }
 
     .btn-cta {
         font-size: 25px;
-        padding: 20px 20px;
+        padding: 20px 60px;
         float: right;
         margin-top: -140px;
         margin-right: 30px;
