--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -39,28 +39,41 @@
 }
 
 @media (min-width:280px) {
+  .background-image {
+    background-image: url('../../../images/pages/newhero.png'); /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 70vh; /* Adjust as needed */
+  }
+
   .container-fluid-hero{
-    width: 96%;
+    width: 100%;
   }
 
   .hero-header {
-    font-size: 33px;
-    margin: 30px 10px 10px 10px;
+    font-size: 20px;
+    margin: 50px 10px 10px 10px;
     width: 100%;
   }
 
 
   .hero-desc{
-    padding-left: 1px;
+    padding-left: 20px;
+    padding-top: 10px;
+    width: 80%;
   }
 
+  .btn-text{
+    font-size: 14px;
+  }
   .btn-crow{
     width: 100%;
-    padding-left: 20px;
+    padding-left: 23px;
   }
   .btn-hero-one{
     background-color: rgb(20, 20, 58);
-    padding: 20px 50px;
+    padding: 20px 40px;
     border-radius: 4px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -68,20 +81,21 @@
   
   .btn-hero-two {
     background-color: rgb(20, 20, 58);
-    padding: 20px 72px;
+    padding: 20px 25px;
     border-radius: 4px; 
-    margin-bottom: 20px;
+    margin-bottom: 45px;
   }
 
 
   .partners{
     text-align: center;
-  font-size: 20px;
+  font-size: 15px;
+  margin-top: 20px;
 }
 .partners-hero-img img {
    
-  max-width: 70%;
-    margin: 20px 5px 10px 50px;
+  max-width: 25%;
+    margin: 0px 5px 35px 50px;
 }
 
 
@@ -91,27 +105,37 @@
 
 @media (min-width:350px) and (max-width: 480px) {
 
+  .background-image {
+    background-image: url('../../../images/pages/newhero.png'); /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 170vh; /* Adjust as needed */
+  }
+
 
   .container-fluid-hero{
     overflow: hidden;
     width: 100%;
   }
   .hero-header {
-    padding: 60px 30px 30px 15px;
+    padding: 30px 30px 30px 15px;
     font-size: 45px;
-    margin: -10px 10px;
-    width: 100%;
+    margin: 10px 10px;
+    width: 85%;
   }
   .hero-desc{
-    width: 90%;
+    width: 80%;
     padding-left: 25px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+    font-size: 20px;
   }
 
   .btn-crow{
     padding-left: 25px;
-  
-    
+  }
+  .btn-text{
+    font-size: 20px;
   }
   .btn-hero-one{
     background-color: rgb(20, 20, 58);
@@ -128,15 +152,15 @@
 
   .partners{
     text-align: center;
-  font-size: 15px;
-  margin-top: 20px;
-  margin-left: 16px;
+  font-size: 20px;
+  margin-top: 50px;
+  margin-left: 10px;
     
 }
 .partners-hero-img img {
-  width: 30%;
-  margin-left: 60px;
-  margin-top: 10px;
+  width: 25%;
+  margin-left: 20px;
+  margin-top: 40px;
   margin-bottom: 10px;
 }
 /* .partners-hero-img img {
@@ -209,7 +233,7 @@
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 998px) {
 
   .background-image {
     
@@ -221,9 +245,10 @@
   }
    .hero-header {
     padding: 10px;
-    font-size: 70px;
+    font-size: 50px;
     margin: 20px;
     width: 70%;
+    color: red;
   }
 
   .hero-desc{
@@ -272,10 +297,11 @@ margin: 5px;
 
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
 
-  .background-image {
+    .background-image {  
     
-    height: 200vh; /* Adjust as needed */
-  }
+      height: 130vh; /* Adjust as needed */
+    }
+  
 
   .container-fluid-hero{
     width: 99.2%;
@@ -283,20 +309,19 @@ margin: 5px;
    .hero-header {
     padding: 10px;
     font-size: 70px;
-    margin: 100px 40px 20px 40px;
-    width: 70%;
+    margin: 150px 40px 20px 40px;
+    width: 55%;
   }
 
   .hero-desc{
     padding: 30px  30px  50px  50px;
     font-size: 25px;
-    width: 75%;
+    width: 68%;
   }
 
   .btn-crow{
     width: 60%;
     padding-left: 50px;
-    padding-bottom: 50px;
   }
   .btn-hero-one{
     background-color: rgb(20, 20, 58);
@@ -327,23 +352,92 @@ margin: 5px;
   .partners{
     font-size: 20px;
     text-align: center;
-    margin-top: 250px;
+    margin-top: 330px;
    
   }
 
   
   .partners-hero-img img {
   
-    max-width: 6%;
-    margin: 50px 10px 10px 175px;
+    max-width: 5%;
+    margin: 10px 10px 10px 115px;
   }
 }
 
-@media screen and  (min-width: 1281px) {
+@media screen and (min-width: 1281px) and (max-width: 1442px) {
+
+  .background-image {
+  
+    height: auto; /* Adjust as needed */
+  }
+
+
+.container-fluid-hero{
+  width: 99.2%;
+}
+ .hero-header {
+  padding: 10px;
+  font-size: 70px;
+  margin: 150px 40px 20px 40px;
+  width: 55%;
+}
+
+.hero-desc{
+  padding: 30px  30px  50px  50px;
+  font-size: 25px;
+  width: 55%;
+}
+
+.btn-crow{
+  width: 60%;
+  padding-left: 50px;
+}
+.btn-hero-one{
+  background-color: rgb(20, 20, 58);
+  padding: 20px 60px;
+  border-radius: 4px;
+  margin-top: 1px;
+}
+
+.btn-hero-two {
+  background-color: rgb(20, 20, 58);
+  padding: 20px 45px;
+  border-radius: 4px; 
+}
+
+.btn-hero-one:hover {
+  background-color: rgb(76, 157, 197);
+}
+
+.btn-hero-two:hover {
+  background-color: rgb(76, 157, 197);
+}
+
+
+.btn-text{
+  font-size: 20px;
+}
+
+.partners{
+  font-size: 20px;
+  text-align: center;
+  margin-top: 150px;
+ 
+}
+
+
+.partners-hero-img img {
+
+  max-width: 5%;
+  margin: 10px 10px 10px 115px;
+}
+}
+
+@media screen and  (min-width: 1443px) {
 
   .background-image {
     
-    height: 160vh; /* Adjust as needed */
+    height: auto; /* Adjust as needed */
   }
 
   .container-fluid-hero{
@@ -352,21 +446,23 @@ margin: 5px;
    .hero-header {
     padding: 25px;
     font-size: 70px;
-    width: 70%;
+    width: 55%;
     margin-top: 30px;
-    margin: 100px 40px 50px 25px;
+    margin: 80px 40px 10px 25px;
   }
 
   .hero-desc{
     padding: 25px;
-    margin: 30px  30px  50px  30px;
+    margin: 1px  30px  50px  30px;
     font-size: 25px;
-    width: 80%;
+    width: 55%;
   }
 
   .btn-crow{
     width: 50%;
     padding-left: 50px;
+   
+    
    
   }
   .btn-hero-one{
@@ -398,15 +494,15 @@ margin: 5px;
   .partners{
     font-size: 20px;
     text-align: center;
-    margin-top: -130px;
+    margin-top: -150px;
    
   }
 
   
 .partners-hero-img img {
 
-  max-width: 6%;
-    margin: 50px 10px 10px 200px;
+  max-width: 5%;
+    margin: -130px 10px 10px 160px;
 }
 }
 
