--- a/src/components/home/ourwork/ourwork.css
+++ b/src/components/home/ourwork/ourwork.css
@@ -30,8 +30,9 @@
     .ourwork-header{
         padding: 20px;
         color: rgb(20, 20, 58);
-        font-size: 30px;
+        font-size: 20px;
         margin-right: 10px;
+        margin-top: 120px;
     }
     .img-fluid {
         max-width: 75%;
@@ -51,7 +52,11 @@
       width: calc(50% - 10px); /* Adjust as needed with margin */
       margin-bottom: 30px;
     }
-   
+
+    .ourwork-header{
+    margin-top: -140px;
+    font-size: 30px;
+    }
 
    
 
@@ -87,17 +92,17 @@ box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 
     .ourwork-header{
       padding: 20px;
-      font-size: 40px;
+      font-size: 30px;
     }
   
-    .col-work {
-      width: calc(20% - 1px); /* Adjust as needed with margin */
-      margin-bottom: 30px;
+     .col-work {
+      width: calc(20% - 50px); /* Adjust the width and margin as needed */
+      margin: 0 10px 30px 10px; /* Adjust margins as needed */
     }
 
     .img-fluid:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+      transform: scale(1.3);
+      z-index: 200;
     }
   }
   
@@ -110,13 +115,13 @@ box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
   
     .col-work {
-      width: calc(20% - 1px); /* Adjust as needed with margin */
-      margin-bottom: 30px;
+      width: calc(20% - 50px); /* Adjust the width and margin as needed */
+      margin: 0 10px 30px 10px; 
     }
 
     .img-fluid:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+      transform: scale(1.3);
+      z-index: 8;
     }
   }
 
