--- a/src/components/home/testimonial/testimonial.css
+++ b/src/components/home/testimonial/testimonial.css
@@ -33,6 +33,7 @@
 
       .testimonial-header{
         margin-right: 10px;
+        font-size: 20px;
     }
 
       .testimonial-img {
@@ -42,32 +43,70 @@
     }
 
     .testimonial-text {
-      font-size: 17px;
+      font-size: 14px;
       padding: 30px;
       }
 
       .testimonial-name {
-        font-size: 17px;
+        font-size: 12px;
         font-weight: bold;
-        padding-left: 10px;        
+        padding-left: 10px; 
+        margin-top: -2px;       
     }
 
     .testimonial-desc {
-      font-size: 16px;
+      font-size: 12px;
       padding-left: 10px;
-      padding-bottom: 40px;
+      padding-bottom: 30px;
+      margin-top: -2px;
   }
 
+  
+  .read-more-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 13px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+ font-weight: bold;
+ display: block;
+ margin: 0 auto;
+  }
+
+
+  .show-less-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 13px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
+    display: block;
+    margin: 0 auto;
+  }
+  .show-less-button:hover {
+    background-color:  red;
+  }
     }
   
     @media (min-width:350px) and (max-width: 480px) {
       .col-md-6 {
-        flex-basis: 100%; /* One testimonial per row */
+        flex-basis: 100%;
       }
 
       .testimonial-header{
         margin-right: 10px;
+        font-size: 30px;
     }
+
 
       .testimonial-img {
         width: 80px;
@@ -78,13 +117,14 @@
     .testimonial-text {
       font-size: 17px;
       padding: 40px;
-      margin-bottom: -5px;
+      margin-bottom: 15px;
       }
 
       .testimonial-name {
         font-size: 17px;
         font-weight: bold;
-        padding-left: 10px;        
+        padding-left: 10px;  
+        margin-top: -2px;      
     }
 
     .testimonial-desc {
@@ -92,6 +132,41 @@
       padding-left: 10px;
       padding-bottom: 40px;
   }
+
+  .read-more-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+ font-weight: bold;
+ display: block;
+ margin: 0 auto;
+  }
+
+
+  .show-less-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
+    display: block;
+    margin: 0 auto;
+  }
+  .show-less-button:hover {
+    background-color:  red;
+  }
+ 
     }
     
     @media (min-width:481px) and (max-width: 767px) {
@@ -162,7 +237,7 @@
         text-align: center;
         padding: 20px;
         color: rgb(20, 20, 58);
-        font-size: 40px;
+        font-size: 30px;
         margin-bottom: 30px;
         
     }
@@ -173,24 +248,65 @@
     }
 
     .testimonial-text {
-      font-size: 17px;
+      font-size: 15px;
       padding: 30px;
       }
 
       .testimonial-name {
         font-size: 17px;
         font-weight: bold;
-        padding-left: 10px;        
+        margin-left: -5px;        
     }
 
     .testimonial-desc {
-      font-size: 13px;
-      padding-left: 10px;
+      font-size: 16px;
+      margin-left: -5px;
       padding-bottom: 40px;
   }  
+
+  .read-more-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 20px 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+ margin-left: 370px;
+ width: 80%;
+ font-weight: bold;
+  }
+
+  .read-more-button:hover{
+    background-color:  rgb(76, 157, 197);
+    justify-content: center;
+  }
+
+  .show-less-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 30px 0px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    position: relative;
+    top: 200px;
+    right: 300px;
+ width: 80%;
+ margin-top: 100px;
+  }
+  .show-less-button:hover {
+    background-color:  red;
+  }
+
     }
-    
-    @media screen and  (min-width: 1281px) {
+@media screen and (min-width: 1281px) and (max-width: 1442px) {
+  
 
       .testimonial-header{
         text-align: center;
@@ -218,13 +334,142 @@
       .testimonial-name {
         font-size: 17px;
         font-weight: bold;
-        padding-left: 10px;        
+        margin-left: -20px;        
     }
 
     .testimonial-desc {
       font-size: 16px;
-      padding-left: 10px;
+      margin-left: -20px;
       padding-bottom: 40px;
   } 
+
+  .test-all{
+    margin-bottom: 30px;
+    margin-right: 20px;
+  }
+  .read-more-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 30px 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+ margin-left: 400px;
+ width: 80%;
+ font-weight: bold;
+  }
+
+  .read-more-button:hover{
+    background-color:  rgb(76, 157, 197);
+    justify-content: center;
+  }
+
+  .show-less-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 30px 0px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    position: relative;
+    top: 200px;
+    right: 380px;
+ width: 80%;
+ margin-top: 120px;
+ font-weight: bold;
+  }
+  .show-less-button:hover {
+    background-color:  red;
+  }
+    }
+
+    
+    @media screen and  (min-width: 1443px) {
+
+      .testimonial-header{
+        text-align: center;
+        padding: 20px;
+        color: rgb(20, 20, 58);
+        font-size: 40px;
+        margin-bottom: 30px;
+        
+    }
+      .col-md-4 {
+        flex-basis: 100%; /* One testimonial per row */
+      }
+
+      .testimonial-img {
+        width: 80px;
+        height: 80px;
+        margin-left: 10px;
+    }
+
+    .testimonial-text {
+      font-size: 17px;
+      padding: 30px;
+      }
+
+      .testimonial-name {
+        font-size: 17px;
+        font-weight: bold;
+        margin-left: -40px;        
+    }
+
+    .testimonial-desc {
+      font-size: 16px;
+      margin-left: -40px;
+      padding-bottom: 40px;
+  } 
+
+  .test-all{
+    margin-bottom: 30px;
+    margin-right: 20px;
+  }
+  .read-more-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 30px 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+ margin-left: 480px;
+ width: 80%;
+ font-weight: bold;
+  }
+
+  .read-more-button:hover{
+    background-color:  rgb(76, 157, 197);
+    justify-content: center;
+  }
+
+  .show-less-button{
+    background-color:  rgb(20, 20, 58);
+    color: #fff;
+    padding: 30px 0px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    position: relative;
+    top: 200px;
+    right: 380px;
+ width: 80%;
+ margin-top: 130px;
+ font-weight: bold;
+  }
+  .show-less-button:hover {
+    background-color:  red;
+  }
     }
  
