--- a/src/components/marketing/marketing.css
+++ b/src/components/marketing/marketing.css
@@ -28,6 +28,29 @@
     font-weight: bold;
   }
 
+  .marketingsection{
+    background-color:  rgb(20, 20, 58); /* Set the background color */
+    padding: 70px;
+  }
+
+  .marketingsection h4{
+    color: white; 
+    margin-bottom: 20px; 
+  }
+
+  .btn-marketingsection {
+    background-color:  rgb(76, 157, 197);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+
+}
+
 
   @media (min-width:280px) {
     .container-fluid-hero-market{
@@ -36,19 +59,25 @@
   
     .hero-header-market {
       font-size: 33px;
-      margin: 30px 10px 10px 10px;
-      width: 100%;
+      margin: 50px 10px 50px 10px;
+      width: 90%;
+      
     }
   
   
     .hero-desc-market{
-      padding-left: 1px;
+      padding-left: 25px;
+      margin: 0px 10px 50px 0px;
     }
   
     .btn-crow-market{
       width: 100%;
       padding-left: 20px;
     }
+    .btn-text-market{
+      font-size: 15px;
+    }
+  
     .btn-hero-one-market{
       background-color: rgb(20, 20, 58);
       padding: 20px 50px;
@@ -56,13 +85,18 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
-    
-    .btn-hero-two-market {
-      background-color: rgb(20, 20, 58);
-      padding: 20px 72px;
-      border-radius: 4px; 
-      margin-bottom: 20px;
-    }
+    .market h4 {
+      color: white; 
+      width: 100%;
+      font-size: 13px; 
+      text-align: center;
+  }
+  
+  .btn-market {
+    margin: 0 auto;
+    width: 100%;
+    font-size: 13px;
+  }
   
   
   
@@ -75,6 +109,7 @@
   
     .container-fluid-hero-market{
       width: 97.5%;
+      height: 40vh;
     }
     .hero-header-market {
       padding: 60px 30px 30px 15px;
@@ -100,11 +135,23 @@
       margin-top: 10px;
       width: 100%;
     }
-    
-    .btn-hero-two-market {
-      background-color: rgb(20, 20, 58);
-      width: 100%;
+    .btn-text-market{
+      font-size: 15px;
     }
+    
+    .marketingsection h4 {
+      color: white; 
+      width: 100%;
+      font-size: 20px; 
+      text-align: center;
+  }
+
+  .btn-marketingsection {
+    margin: 0 auto;
+    width: 100%;
+    font-size: 16px;
+}
+
   
 
    
@@ -214,7 +261,7 @@
   
     .background-image-market {
       
-      height: 160vh; /* Adjust as needed */
+      height: 90vh; /* Adjust as needed */
     }
   
     .container-fluid-hero-market{
@@ -223,14 +270,14 @@
      .hero-header-market {
       padding: 10px;
       font-size: 70px;
-      margin: 30px 40px -10px 40px;
-      width: 65%;
+      margin: 150px 40px -10px 40px;
+      width: 70%;
     }
   
     .hero-desc-market{
       padding: 30px 30px 30px 50px;
       font-size: 25px;
-      width: 80%;
+      width: 70%;
     }
   
     .btn-crow-market{
@@ -262,15 +309,32 @@
     .btn-text-market{
       font-size: 20px;
     }
-  
+   .marketingsection h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;/* Add spacing below the heading */
+  }
+
+  .btn-marketingsection {
+    font-size: 20px;
+    padding: 20px 60px;
+    float: right;
+    margin-top: -170px;
+    margin-right: 30px;
+}
+    .btn-marketingsection:hover{
+      background-color: red;
+
+    }
   
   }
-  
-  @media screen and  (min-width: 1281px) {
-  
+
+  @media screen and (min-width: 1281px) and (max-width: 1442px) {
     .background-image-market {
       
-      height: 160vh; /* Adjust as needed */
+      height: 90vh; /* Adjust as needed */
     }
   
     .container-fluid-hero-market{
@@ -281,14 +345,14 @@
       font-size: 70px;
       width: 70%;
       margin-top: 30px;
-      margin: 30px 40px -15px 25px;
+      margin: 150px 40px -15px 25px;
     }
   
     .hero-desc-market{
       padding: 5px 40px 40px 40px;
       margin: 30px;
       font-size: 25px;
-      width: 70%;
+      width: 65%;
     }
   
     .btn-crow-market{
@@ -297,9 +361,12 @@
     }
     .btn-hero-one-market{
       background-color: rgb(20, 20, 58);
-      padding: 20px 32px;
+      padding: 20px 50px;
       border-radius: 4px;
       margin-top: 1px;
+    }
+    .btn-text-market{
+      font-size: 30px;
     }
     
     .btn-hero-two-market {
@@ -318,6 +385,102 @@
    
     .btn-text{
       font-size: 25px;
+    }
+    .marketingsection h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;/* Add spacing below the heading */
+  }
+
+  .btn-marketingsection {
+    font-size: 20px;
+    padding: 20px 60px;
+    float: right;
+    margin-top: -170px;
+    margin-right: 30px;
+}
+    .btn-marketingsection:hover{
+      background-color: red;
+
+    }
+  }
+  
+  @media screen and  (min-width: 1443px) {
+  
+    .background-image-market {
+      
+      height: 90vh; /* Adjust as needed */
+    }
+  
+    .container-fluid-hero-market{
+      width: 99.2%;
+    }
+     .hero-header-market {
+      padding: 40px;
+      font-size: 70px;
+      width: 70%;
+      margin-top: 30px;
+      margin: 150px 40px -15px 25px;
+    }
+  
+    .hero-desc-market{
+      padding: 5px 40px 40px 40px;
+      margin: 30px;
+      font-size: 25px;
+      width: 65%;
+    }
+  
+    .btn-crow-market{
+      width: 50%;
+      padding-left: 70px;
+    }
+    .btn-hero-one-market{
+      background-color: rgb(20, 20, 58);
+      padding: 20px 50px;
+      border-radius: 4px;
+      margin-top: 1px;
+    }
+    .btn-text-market{
+      font-size: 30px;
+    }
+    
+    .btn-hero-two-market {
+      background-color: rgb(20, 20, 58);
+      padding: 20px 32px;
+      border-radius: 4px;
+    }
+  
+    .btn-hero-one-market:hover {
+      background-color: rgb(76, 157, 197);
+    }
+  
+    .btn-hero-two-market:hover {
+      background-color: rgb(76, 157, 197);
+    }
+   
+    .btn-text{
+      font-size: 25px;
+    }
+    .marketingsection h4 {
+      color: white; 
+      width: 70%;
+      font-size: 30px; 
+      align-items: start;
+      padding: 30px 30px 30px 0px;/* Add spacing below the heading */
+  }
+
+  .btn-marketingsection {
+    font-size: 20px;
+    padding: 20px 60px;
+    float: right;
+    margin-top: -140px;
+    margin-right: 30px;
+}
+    .btn-marketingsection:hover{
+      background-color: red;
+
     }
   }
   
